--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -46,8 +46,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
-    "nan": "^2.17.0",
-    "typescript": "^4.9.5"
+    "nan": "^2.17.0"
   },
   "overrides": {
     "autoprefixer": "10.4.5"
