--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -24,6 +24,7 @@
     "rimraf": "^4.1.2",
     "typescript": "^4.9.5",
     "web-vitals": "^3.1.1",
+    "webpack-dev-server": "^4.15.1",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
     "workbox-cacheable-response": "^6.5.4",
@@ -46,7 +47,8 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
-    "nan": "^2.17.0"
+    "nan": "^2.17.0",
+    "webpack-cli": "^5.1.4"
   },
   "overrides": {
     "autoprefixer": "10.4.5"
@@ -61,7 +63,8 @@
     "build": "react-scripts build",
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint ./src/"
+    "lint": "eslint ./src/",
+    "serve": "webpack serve"
   },
   "eslintConfig": {
     "extends": [
